static/css/layout.css
/* GLOBAL VARIBALES */
:root{
    --text-color: white;
    --main-color: #636363;
    --main-color-darker: #303030;
    --border-color: white;

}

@font-face {
    /* This doesn't work right now */
    font-family: "font-awesome";
    src: url("/static/fonts/fa-regular-400.ttf");
}




body{
    margin: 0;
    display: grid;
    width: 100vw;
    height: 100vh;

    /* 
       The numbers here can get finicky,
       best use standard numbers.
    */
    grid-template-columns: 0.5fr 2fr 2fr 0.5fr;
    grid-template-rows: 0.2fr 2fr 2fr 0.2fr;
    grid-template-areas:
        "hd nav nav nav" 
        "main main main sb" 
        "main main main sb" 
        "ft ft ft sb"
    ;
    color: var(--text-color);
    background-color: var(--main-color);
}

header{
    grid-area: hd;
}

/* HEADER TAG */
/* Adding some finesse for the header title */ 
header > h1{
    color: #F3D8FF;
    margin: 0px;
    font-size: 200%;
    block-size: 100%;
    text-wrap: nowrap;
    line-height: 150%;
    margin-left: 5%;
    padding-right: 10%;
}

header > h1 .cap-c{
    color: #C9E4CA;
}

header > h1 .dash{
    color: var(--text-color)
}

header > h1 .glyph{
    font-family: "font-awesome";
    color:white;
}

/* NAV TAG */
nav{
    grid-area: nav;
}

/* flex container */
nav > ul{
    display: flex;
    flex-wrap: nowrap;
    margin: 0px;
    padding: 0px;
    width: 100%;
    height: 100%;
}

/* flex children lmfao */
nav > ul > a{
    text-align: center;
    list-style-type: none;
    font-size: 1.5rem;
    text-align: center;
    line-height: 220%;
    padding-left: 2.5%;
    padding-right: 2.5%;
}

nav > ul > a:hover{
    color: black;
    background-color: #F3D8FF;
}

/* MAIN TAG */
main{
    grid-area: main;
    background-color: var(--main-color-darker);
}

.sidebar{
    grid-area: sb;
}

/* anchor tags */
a{
    text-decoration: none;
    color: white;
}

/* FOOTER TAG */
footer{
    grid-area: ft;
    margin: 0%;
}

footer > *{
    margin: inherit;
}

